2008-01-01  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* ChangeLog-2007: New file.


Local Variables:
coding: iso-latin-1-unix	
End: