@@ -1,3 +1,10 @@
+2008-01-03  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+        PR classpath/34578:
+	* m4/acinclude.m4:
+	(CLASSPATH_CHECK_JAVAC): Don't rely on 1.5 class
+	library.
+	
 2008-01-01  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* ChangeLog-2007: New file.
